set light mode --tertiary color to slate-300

--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -3,7 +3,7 @@
   --entry: #e2e8f0; /* slate-200 */
   --primary: #065f46; /* indigo-800 */
   --secondary: #334155; /* slate-700 */
-  --tertiary: #94a3b8; /* slate-400 */
+  --tertiary: #cbd5e1; /* slate-300 */
   --content: #334155; /* slate-700 */
   --code-block-bg: #1e1e1e; /* vscode bg */
   --code-bg: #e2e8f0; /* slate-200 */
